--- a/Client.Web/Client.Web.csproj
+++ b/Client.Web/Client.Web.csproj
@@ -111,8 +111,22 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Scripts\App\config.js" />
+    <Content Include="Scripts\Libs\angular\angular-csp.css" />
+    <Content Include="Scripts\Libs\angular\angular.js" />
+    <Content Include="Scripts\Libs\angular\angular.min.js" />
+    <Content Include="Scripts\Libs\angular\index.js" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Web.config" />
+    <Content Include="Scripts\Libs\angular\.bower.json" />
+    <Content Include="Scripts\Libs\angular\angular.min.js.gzip" />
+    <Content Include="Scripts\Libs\angular\angular.min.js.map" />
+    <Content Include="Scripts\Libs\angular\bower.json" />
+    <Content Include="Scripts\Libs\angular\LICENSE.md" />
+    <Content Include="Scripts\Libs\angular\package.json" />
+    <Content Include="Scripts\Libs\angular\README.md" />
+    <Content Include=".bowerrc" />
+    <Content Include="bower.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -129,7 +143,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Start\Startup.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Scripts\App\Controllers\" />
+    <Folder Include="Scripts\App\Directives\" />
+    <Folder Include="Scripts\App\Filters\" />
+    <Folder Include="Scripts\App\Fonts\" />
+    <Folder Include="Scripts\App\Srrvices\" />
+    <Folder Include="Scripts\App\Styles\" />
+    <Folder Include="Scripts\App\Templates\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
