--- a/ApiVersioningModule/ApiVersioningModule.csproj
+++ b/ApiVersioningModule/ApiVersioningModule.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A226D174-6DD2-4290-8DBC-E201EFC54789}</ProjectGuid>
+    <ProjectGuid>{14983888-7213-46B4-A2A5-97774B02C64F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Client.Api.v1</RootNamespace>
-    <AssemblyName>Client.Api.v1</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>ApiVersioningModule</RootNamespace>
+    <AssemblyName>ApiVersioningModule</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -29,9 +29,21 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Test|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Test\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Stage|AnyCPU'">
+    <OutputPath>bin\Stage\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ConquerorsFramework, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ConquerorsFramework.0.1.1\lib\ConquerorsFramework.dll</HintPath>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -44,8 +56,13 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq" />
@@ -56,18 +73,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HomeController.cs" />
+    <Compile Include="App_Start\ApiVersioningConfig.cs" />
+    <Compile Include="Extensions\HttpRouteCollectionExtensions.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\VersionNumberResolvers\HeaderApiVersionResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\VersionNumberResolvers\UrlApiVersionResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\ApiAssemblyResolvers\ApiVersionAllAssembliesResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\ApiAssemblyResolvers\ApiVersionAssemblyResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\ApiAssemblyResolvers\Interfaces\IApiVersionAllAssembliesResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\ApiAssemblyResolvers\Interfaces\IApiVersionAssemblyResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\VersionNumberResolvers\Interfaces\IApiVersionResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\VersionNumberResolvers\Interfaces\INoApiVersionResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\VersionNumberResolvers\NoApiVersionDefinedResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionResolvers\VersionNumberResolvers\NoApiVersionLastResolver.cs" />
+    <Compile Include="HttpControllerSelectors\ApiVersionControllerSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj">
-      <Project>{13607ee9-8b76-4fe3-bcf2-0c09eef929bb}</Project>
-      <Name>Domain</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
