--- a/Client.Api/Client.Api.csproj
+++ b/Client.Api/Client.Api.csproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionFilters\ModelStateValidatorActionFilter.cs" />
+    <Compile Include="App_Start\JsonFormatterConfiguration.cs" />
     <Compile Include="App_Start\RouteConfiguration.cs" />
     <Compile Include="App_Start\SimpleInjectorConfiguration.cs" />
     <Compile Include="FluentValidation\SimpeInjectorValidatorFactory.cs" />
