--- a/Client.Api/packages.config
+++ b/Client.Api/packages.config
@@ -3,6 +3,8 @@
   <package id="ConquerorsFramework" version="0.1.1" targetFramework="net452" />
   <package id="ConquerorsFramework.InMemoryBus" version="0.1.0" targetFramework="net452" />
   <package id="ConquerorsFramework.SimpleInjector" version="0.1.0" targetFramework="net452" />
+  <package id="elmah" version="1.2.2" targetFramework="net452" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net452" />
   <package id="FluentValidation.WebApi" version="6.2.1.0" targetFramework="net452" />
