--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -49,8 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\IAggregateRootEntity.cs" />
+    <Compile Include="Entities\Implementation\City.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ICityRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="UnitOfWork\CQRS\Decorators\CommandHandlerUnitOfWorkDecorator.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
