--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -50,6 +50,10 @@
   <ItemGroup>
     <Compile Include="Entities\IAggregateRootEntity.cs" />
     <Compile Include="Entities\Implementation\City\City.cs" />
+    <Compile Include="Entities\Implementation\City\District.cs" />
+    <Compile Include="Entities\Implementation\City\MetroBranch.cs" />
+    <Compile Include="Entities\Implementation\City\MetroStation.cs" />
+    <Compile Include="Entities\Implementation\File\File.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICityRepository.cs" />
