--- a/Client.Web/Client.Web.csproj
+++ b/Client.Web/Client.Web.csproj
@@ -111,11 +111,20 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Scripts\App\component\header\header.css" />
+    <Content Include="Scripts\App\component\header\header.html" />
+    <Content Include="Scripts\App\component\header\header.js" />
     <Content Include="Scripts\App\config.js" />
+    <Content Include="Scripts\App\images\logo-green.svg" />
+    <Content Include="Scripts\giglob.html" />
+    <Content Include="Scripts\giglob.js" />
+    <Content Include="Scripts\index.html" />
+    <Content Include="Scripts\index.tpl.html" />
     <Content Include="Scripts\Libs\angular\angular-csp.css" />
     <Content Include="Scripts\Libs\angular\angular.js" />
     <Content Include="Scripts\Libs\angular\angular.min.js" />
     <Content Include="Scripts\Libs\angular\index.js" />
+    <Content Include="Scripts\_giglob.js" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\Libs\angular\.bower.json" />
@@ -127,6 +136,8 @@
     <Content Include="Scripts\Libs\angular\README.md" />
     <Content Include=".bowerrc" />
     <Content Include="bower.json" />
+    <Content Include="Scripts\package.json" />
+    <Content Include="Scripts\App\component\header\header.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
