добавил сущности объекта недвижимости, предложения объекта недвижимости, станции метро поблизости от объекта недвижимости, документа объекта недвижимости, фотографии объекта недвижимости

--- a/Client.Api/Web.config
+++ b/Client.Api/Web.config
@@ -14,8 +14,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;"
-      providerName="System.Data.SqlClient"/>
+    <add name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
