--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -34,6 +34,14 @@
       <HintPath>..\packages\ConquerorsFramework.0.1.1\lib\ConquerorsFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
@@ -43,6 +51,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -59,6 +68,14 @@
     <Compile Include="Entities\Implementation\City\MetroStation.cs" />
     <Compile Include="Entities\Implementation\File\File.cs" />
     <Compile Include="Entities\Implementation\User.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\Enums\BuildingCategory.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\Enums\OfferType.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\Enums\PropertyType.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\Property.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\PropertyDocument.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\PropertyNearMetroStation.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\PropertyOffer.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\PropertyPhoto.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICityRepository.cs" />
@@ -68,6 +85,7 @@
     <Compile Include="UnitOfWork\IUnitOfWorkFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
