--- a/Domain.Persistence.EntityFramework/Domain.Persistence.EntityFramework.csproj
+++ b/Domain.Persistence.EntityFramework/Domain.Persistence.EntityFramework.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Implementation\CityRepository.cs" />
     <Compile Include="Repositories\Implementation\EntityFrameworkRepository.cs" />
     <Compile Include="UnitOfWork\Implementation\EntityFrameworkUnitOfWork.cs" />
     <Compile Include="UnitOfWork\Implementation\EntityFrameworkUnitOfWorkFactory.cs" />
@@ -74,7 +75,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="SQL\cities.sql" />
+    <Content Include="SQL\cities.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
