--- a/Client.Web/Scripts/package.json
+++ b/Client.Web/Scripts/package.json
@@ -17,11 +17,14 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-bump": "^2.2.0",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.11",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
     "gulp-inject": "^4.1.0",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-html2js": "^0.2.2",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4",
     "run-sequence": "^1.2.2"
