--- a/Client.Web/Scripts/package.json
+++ b/Client.Web/Scripts/package.json
@@ -27,6 +27,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "browser-sync": "^2.13.0"
   }
 }
