--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Entities\IAggregateRootEntity.cs" />
     <Compile Include="Entities\Implementation\City\City.cs" />
+    <Compile Include="Entities\Implementation\City\Queries\City_GetAllQuery.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICityRepository.cs" />
@@ -56,6 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CQRS\CQRS.csproj">
+      <Project>{b412e005-bf9b-49bb-8dde-6939a2456382}</Project>
+      <Name>CQRS</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
