--- a/Client.Api/packages.config
+++ b/Client.Api/packages.config
@@ -3,6 +3,7 @@
   <package id="elmah" version="1.2.2" targetFramework="net452" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Expressmapper" version="1.8.1" targetFramework="net452" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net452" />
   <package id="FluentValidation.WebApi" version="6.2.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
