Наполнение БД районами Москвы

--- a/Domain.Persistence.EntityFramework/Domain.Persistence.EntityFramework.csproj
+++ b/Domain.Persistence.EntityFramework/Domain.Persistence.EntityFramework.csproj
@@ -90,7 +90,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="SqlServerTypes\readme.htm" />
+    <Content Include="SQL\districts.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
