--- a/Client.Web/Scripts/package.json
+++ b/Client.Web/Scripts/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/IngeniusSystems/GiGlob#readme",
   "devDependencies": {
+    "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
     "gulp-bump": "^2.2.0",
     "gulp-clean": "^0.3.2",
@@ -27,7 +28,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4",
-    "run-sequence": "^1.2.2",
-    "browser-sync": "^2.13.0"
+    "run-sequence": "^1.2.2"
   }
 }
