--- a/Client.Web/Client.Web.csproj
+++ b/Client.Web/Client.Web.csproj
@@ -118,6 +118,10 @@
     <Content Include="Scripts\App\component\header\header.js" />
     <Content Include="Scripts\App\config.js" />
     <Content Include="Scripts\App\images\logo-green.svg" />
+    <Content Include="Scripts\App\theme\img\logo-green.svg" />
+    <Content Include="Scripts\App\theme\style\buttons.css" />
+    <Content Include="Scripts\App\theme\style\components.css" />
+    <Content Include="Scripts\App\theme\style\fonts.css" />
     <Content Include="Scripts\giglob.html" />
     <Content Include="Scripts\giglob.js" />
     <Content Include="Scripts\index.html" />
@@ -7799,6 +7803,27 @@
     <Content Include="Scripts\node_modules\node-gyp\gyp\buildbot\commit_queue\cq_config.json" />
     <Content Include="Scripts\node_modules\node-gyp\gyp\buildbot\commit_queue\OWNERS" />
     <Content Include="Scripts\node_modules\node-gyp\gyp\buildbot\commit_queue\README" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Black.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-BlackItalic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Bold.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-BoldItalic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Hairline.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-HairlineItalic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Heavy.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-HeavyItalic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Italic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Light.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-LightItalic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Medium.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-MediumItalic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Regular.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Semibold.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-SemiboldItalic.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-Thin.ttf" />
+    <Content Include="Scripts\App\Fonts\Lato\Lato-ThinItalic.ttf" />
+    <Content Include="Scripts\App\theme\style\buttons.scss" />
+    <Content Include="Scripts\App\theme\style\components.scss" />
+    <Content Include="Scripts\App\theme\style\fonts.scss" />
     <None Include="Scripts\node_modules\node-gyp\gyp\codereview.settings" />
     <Content Include="Scripts\node_modules\node-gyp\gyp\data\win\large-pdb-shim.cc" />
     <Content Include="Scripts\node_modules\node-gyp\gyp\DEPS" />
@@ -9044,7 +9069,6 @@
     <Folder Include="Scripts\App\Controllers\" />
     <Folder Include="Scripts\App\Directives\" />
     <Folder Include="Scripts\App\Filters\" />
-    <Folder Include="Scripts\App\Fonts\" />
     <Folder Include="Scripts\App\Srrvices\" />
     <Folder Include="Scripts\App\Styles\" />
     <Folder Include="Scripts\App\Templates\" />
