--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -34,12 +34,20 @@
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RazorEngine, Version=3.0.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
+      <HintPath>..\packages\RazorEngine.3.0.0\lib\net40\RazorEngine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SimpleInjector, Version=3.2.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
       <HintPath>..\packages\SimpleInjector.3.2.0\lib\net45\SimpleInjector.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\RazorEngine.3.0.0\lib\net40\System.Web.Razor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,9 +57,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\IAggregateRootEntity.cs" />
+    <Compile Include="Entities\User\Implementation\Commands\User_ConfirmEmailCommand.cs" />
     <Compile Include="Entities\User\Implementation\Commands\User_CreateCommand.cs" />
+    <Compile Include="Entities\User\Implementation\Commands\User_GenerateEmailConfirmationTokenCommand.cs" />
     <Compile Include="Entities\User\Implementation\Queries\User_CheckUserIsExistsByEmailQuery.cs" />
     <Compile Include="Entities\User\Implementation\Queries\User_CheckUserIsExistsByUsernameAndPasswordQuery.cs" />
+    <Compile Include="Entities\User\Implementation\Queries\User_CheckUserIsExistsByEmailConfirmationTokenQuery.cs" />
+    <Compile Include="Entities\User\Implementation\Queries\User_GetQuery.cs" />
     <Compile Include="Entities\User\Implementation\User.cs" />
     <Compile Include="Entities\User\Services\IUserAuthorizationService.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
