Aвтокомплит для станций метро, модели, QueryHandler

--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Models\City\CityModel.cs" />
     <Compile Include="Models\City\DistrictModel.cs" />
+    <Compile Include="Models\City\MetroBranchModel.cs" />
+    <Compile Include="Models\City\MetroStationModel.cs" />
     <Compile Include="Models\Home\DataModel.cs" />
     <Compile Include="Models\Home\ResponseExamples\DataModelResponseExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
