Реализована выгрузка станций с ветками

--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Models\City\MetroBranchModel.cs" />
     <Compile Include="Models\City\MetroStationModel.cs" />
     <Compile Include="Models\Home\DataModel.cs" />
+    <Compile Include="Models\Home\StationModel.cs" />
     <Compile Include="Models\Home\ResponseExamples\DataModelResponseExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
