Реализация выгрузки районов, фикс генерации цветов веток

--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Models\City\CityModel.cs" />
     <Compile Include="Models\City\DistrictModel.cs" />
+    <Compile Include="Models\City\DistrictsModel.cs" />
     <Compile Include="Models\City\MetroBranchModel.cs" />
     <Compile Include="Models\City\MetroStationModel.cs" />
     <Compile Include="Models\Home\DataModel.cs" />
