--- a/Domain.Persistence.FileStorage.Tests/Domain.Persistence.FileStorage.Tests.csproj
+++ b/Domain.Persistence.FileStorage.Tests/Domain.Persistence.FileStorage.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{998906EB-AA90-47F2-8A6A-5F259185A168}</ProjectGuid>
+    <ProjectGuid>{B9CD00EC-DC69-46C2-8F8B-D67AA134AFED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Client.Api.v1.Models</RootNamespace>
-    <AssemblyName>Client.Api.v1.Models</AssemblyName>
+    <RootNamespace>Domain.Persistence.FileStorage.Tests</RootNamespace>
+    <AssemblyName>Domain.Persistence.FileStorage.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>App_Data\Client.Api.v1.Models.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,9 +28,20 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>App_Data\Client.Api.v1.Models.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.5.13.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.5.13\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,43 +52,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\City\CityModel.cs" />
-    <Compile Include="Models\City\DistrictModel.cs" />
-    <Compile Include="Models\City\MetroBranchModel.cs" />
-    <Compile Include="Models\City\NearMetroStationModel.cs" />
-    <Compile Include="Models\Common\IdentifyModel.cs" />
-    <Compile Include="Models\Common\ResponseExamples\SuccessResponseExample.cs" />
-    <Compile Include="Models\File\FileUploadResultModel.cs" />
-    <Compile Include="Models\File\ResponseExamples\FileUploadResponseExample.cs" />
-    <Compile Include="Models\Home\DataModel.cs" />
-    <Compile Include="Models\Home\ResponseExamples\DataModelResponseExample.cs" />
-    <Compile Include="Models\Home\ResponseExamples\StationModelResponseExample.cs" />
-    <Compile Include="Models\Home\StationModel.cs" />
-    <Compile Include="Models\PropertyOffer\PropertyOfferCreateNearMetroStationRequestModel.cs" />
-    <Compile Include="Models\PropertyOffer\PropertyOfferCreateRequestModel.cs" />
-    <Compile Include="Models\PropertyOffer\PropertyOfferCreatePhotoRequestModel.cs" />
+    <Compile Include="FileStorageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Client.Api.v1.Models.XML">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Domain.Persistence.FileStorage\Domain.Persistence.FileStorage.csproj">
+      <Project>{0cb8fb68-a755-48be-bc3f-4991e46ef3c7}</Project>
+      <Name>Domain.Persistence.FileStorage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Domain\Domain.csproj">
       <Project>{13607ee9-8b76-4fe3-bcf2-0c09eef929bb}</Project>
       <Name>Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SwaggerResponseExampleModule\SwaggerResponseExampleModule.csproj">
-      <Project>{9084f7b6-ae3a-4ef4-9414-bf1228916974}</Project>
-      <Name>SwaggerResponseExampleModule</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\а\" />
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
