--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Models\City\NearMetroStationModel.cs" />
     <Compile Include="Models\Common\IdentifyModel.cs" />
     <Compile Include="Models\Common\ResponseExamples\SuccessResponseExample.cs" />
+    <Compile Include="Models\File\UploadingFile.cs" />
     <Compile Include="Models\File\FileUploadResultModel.cs" />
     <Compile Include="Models\File\ResponseExamples\FileUploadResponseExample.cs" />
     <Compile Include="Models\Home\DataModel.cs" />
@@ -77,9 +78,7 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\а\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
