--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -70,7 +70,9 @@
     <Compile Include="Entities\Implementation\City\Queries\City_GetAllDistrictsQuery.cs" />
     <Compile Include="Entities\Implementation\City\Queries\City_GetAllMetroStationQuery.cs" />
     <Compile Include="Entities\Implementation\City\Queries\City_GetAllQuery.cs" />
+    <Compile Include="Entities\Implementation\File\Commands\File_CreateCommand.cs" />
     <Compile Include="Entities\Implementation\File\File.cs" />
+    <Compile Include="Entities\Implementation\File\Queries\File_GetQuery.cs" />
     <Compile Include="Entities\Implementation\User.cs" />
     <Compile Include="Entities\Implementation\PropertyOffer\Enums\BuildingCategory.cs" />
     <Compile Include="Entities\Implementation\PropertyOffer\Enums\OfferType.cs" />
@@ -84,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICityRepository.cs" />
     <Compile Include="Repositories\IDeletableEntityRepository.cs" />
+    <Compile Include="Repositories\IFileRepository.cs" />
     <Compile Include="Repositories\IPropertyOfferRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Storages\IFileStorage.cs" />
