--- a/Client.Api.Authentication/Client.Api.Authentication.csproj
+++ b/Client.Api.Authentication/Client.Api.Authentication.csproj
@@ -60,6 +60,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,7 +72,8 @@
     <Compile Include="AuthConfiguration.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\UserAuthorizationService.cs" />
+    <Compile Include="Services\Implementation\CurrentUserService.cs" />
+    <Compile Include="Services\Implementation\UserAuthorizationService.cs" />
     <Compile Include="Stores\UserStore.cs" />
   </ItemGroup>
   <ItemGroup>
