--- a/Client.Api/Client.Api.csproj
+++ b/Client.Api/Client.Api.csproj
@@ -220,6 +220,10 @@
       <Project>{0cb8fb68-a755-48be-bc3f-4991e46ef3c7}</Project>
       <Name>Domain.Persistence.FileStorage</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Domain.Persistence.File\Domain.Persistence.File.csproj">
+      <Project>{717604b5-8cec-4bde-86aa-ad06542e0661}</Project>
+      <Name>Domain.Persistence.File</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Domain\Domain.csproj">
       <Project>{13607ee9-8b76-4fe3-bcf2-0c09eef929bb}</Project>
       <Name>Domain</Name>
