--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Constants\RegexConstants.cs" />
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Models\Common\ResponseExamples\BadRequestResponseExampleProvider.cs" />
+    <Compile Include="Models\PropertyOffer\Validators\PropertyOfferCreateRequestModelValidator.cs" />
     <Compile Include="Models\User\AuthResultModel.cs" />
     <Compile Include="Models\User\Mail\UserConfirmationMailModel.cs" />
     <Compile Include="Models\User\ResponseExamples\AuthResultModelResponseExample.cs" />
